--- a/src/Alexinea.EntityFrameworkCore.LoggingExposure/Alexinea.EntityFrameworkCore.LoggingExposure.csproj
+++ b/src/Alexinea.EntityFrameworkCore.LoggingExposure/Alexinea.EntityFrameworkCore.LoggingExposure.csproj
@@ -24,14 +24,14 @@
     </PropertyGroup>
 
     <PropertyGroup>
-        <VersionPrefix>2.0.0</VersionPrefix>
-        <VersionSuffix>-beta2</VersionSuffix>
+        <VersionPrefix>2.2.4</VersionPrefix>
+        <VersionSuffix></VersionSuffix>
         <Version>$(VersionPrefix)$(VersionSuffix)</Version>
         <AssemblyVersion>$(VersionPrefix).0</AssemblyVersion>
         <FileVersion>$(VersionPrefix).0</FileVersion>
     </PropertyGroup>
     
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
     </ItemGroup>
 </Project>
